# advent-of-code

./: .gitignore
2020/day01/: Cargo.toml  main.py
2020/day01/src/: main.rs
2020/day02/: Cargo.toml
2020/day02/src/: main.rs
2020/day03/: Cargo.toml
2020/day03/src/: main.rs
2020/day04/src/: main.rs
2020/day05/: Cargo.toml
2020/day05/src/: main.rs
2020/day06/: Cargo.toml
2020/day06/src/: main.rs
2020/day07/: Cargo.toml
2020/day07/src/: main.rs
2020/day08/: Cargo.toml
2020/day08/src/: main.rs
2020/day09/: Cargo.toml
2020/day09/src/: main.rs
2020/day10/src/: main.rs
2020/day11/src/: main.rs
2020/day12/: Cargo.toml
2020/day12/src/: main.rs
2020/day13/: Cargo.toml
2020/day13/src/: main.rs
2020/day14/: Cargo.toml
2020/day14/src/: main.rs
2020/day15/src/: main.rs
2020/day16/: Cargo.toml
2020/day16/src/: main.rs
2020/day21/: Cargo.toml
2020/day21/src/: main.rs
2020/go/: go.mod  main.go
2020/go/day01/: day01.go  day01_test.go
2020/go/day02/: day02.go  day02_test.go
2020/go/day03/: day03.go  day03_test.go
2020/go/day04/: day04.go  day04_test.go
2020/go/utils/: grids.go  io.go  parse.go  utils.go
2020/python/: notebook.py
2020/rust/day04/: Cargo.toml
2020/rust/day06/: input_bak
2020/rust/day09/: Cargo.toml
2020/rust/day10/: Cargo.toml
2020/rust/day11/: Cargo.toml
2020/rust/day13/: Cargo.toml
2021/python/: notebook.py
2022/rust/day05/: Cargo.toml
2022/rust/day05/src/: lexer.rs  main.rs  models.rs  parse_lalrpop.rs  parse_nom.rs  parse_normal.rs  ship copy.lalrpop  ship.lalrpop
(+41 files in other folders)
