[package]
name = "day05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"


[dependencies]
nom = "7.1.1"
libs = { path = "../libs" }
itertools = "0.7.8"
regex = "1.7.0"
lalrpop-util = "0.19.7"
